simplifying section enumerative properties diagonal

--- a/paper/Poissons.tex
+++ b/paper/Poissons.tex
@@ -12,6 +12,7 @@
 \usepackage{stmaryrd}         % Crochet double barre (entiers)
 \usepackage{xargs}
 \usepackage{overpic}
+\usepackage{dsfont}
 
 \input{aux/commands}
 \graphicspath{{figures/}} % les repertoires ou se trouvent les figures
