--- a/paper/Poissons.bib
+++ b/paper/Poissons.bib
@@ -9,9 +9,26 @@
 	PAGES = {537--541},
 }
 
+@article {HiltonPedersen,
+	AUTHOR = {Hilton, Peter and Pedersen, Jean},
+	TITLE = {Catalan numbers, their generalization, and their uses},
+	JOURNAL = {Math. Intelligencer},
+	FJOURNAL = {The Mathematical Intelligencer},
+	VOLUME = {13},
+	YEAR = {1991},
+	NUMBER = {2},
+	PAGES = {64--75},
+}
 
-
-
+@article {Klarner,
+	AUTHOR = {Klarner, David A.},
+	TITLE = {Correspondences between plane trees and binary sequences},
+	JOURNAL = {J. Combinatorial Theory},
+	FJOURNAL = {Journal of Combinatorial Theory},
+	VOLUME = {9},
+	YEAR = {1970},
+	PAGES = {401--411},
+}
 
 
 @Article{Rota,
