cleaning and corrections

--- a/paper/Poissons.tex
+++ b/paper/Poissons.tex
@@ -88,6 +88,8 @@ Hugh Thomas (everything started in Montr\'eal), Sylvie Corteel for hyperplane ar
 We would like to thank the Max Planck Institute for Mathematics in Bonn where part of this work was carried out. 
 The third author was supported by the Australian Research Council Future Fellowship FT210100256.
 
+Galashin (asked about characteristic polynomials). Organizers of the Simon Center conference.
+
 \bibliographystyle{amsalpha}
 
 \bibliography{Poissons}
