--- a/paper/sec/fvectors.tex
+++ b/paper/sec/fvectors.tex
@@ -1,5 +1,6 @@
 % !TEX root = ../Poissons.tex
 
+\newpage
 \section{Combinatorics of multiple braid arrangements}
 \label{sec:combinatorics}
 
@@ -23,7 +24,7 @@ The \defn{$f$-polynomial}~$\fPol$ and \defn{$b$-polynomial}~$\bPol$ of~$\arrange
 \[
 \fPol \eqdef \sum_{k = 0}^d f_k(\arrangement) \, x^k
 \qquad\text{and}\qquad
-\bPol \eqdef \sum_{k = 0}^d b_k(\arrangement) \, x^k
+\bPol \eqdef \sum_{k = 0}^d b_k(\arrangement) \, x^k \, ,
 \]
 where~$f_k(\arrangement)$ denotes the number of $k$-dimensional faces of~$\arrangement$, while~$b_k(\arrangement)$ denotes the number of bounded $k$-dimensional faces of~$\arrangement$.
 \end{definition}
@@ -55,14 +56,7 @@ for all~$F, G, H \in \flatPoset$.
 \end{definition}
 
 \begin{remark}
-Two observations on \cref{def:MobiusPolynomial}:
-\begin{itemize}
-\item The coefficient of~$x^d$ in the M\"obius polynomial~$\mobPol$ gives the more classical \defn{characteristic polynomial}
-\[
-\charPol \eqdef [x^d] \, \mobPol = \sum_G \mu_{\flatPoset}(\R^d,G) \, y^{\dim(G)}.
-\]
-\item Our definition of the M\"obius polynomial slightly differs from that of \cite{Zaslavsky} as we use the dimension of~$F$ instead of its codimension, in order for the next statement to be slightly simpler.
-\end{itemize}
+Our definition of the M\"obius polynomial slightly differs from that of \cite{Zaslavsky} as we use the dimension of~$F$ instead of its codimension, in order for the next statement to be slightly simpler.
 \end{remark}
 
 \begin{theorem}[{\cite[Thm.~A]{Zaslavsky}}]
@@ -78,7 +72,7 @@ The $f$-polynomial, the $b$-polynomial, and the M\"obius polynomial of an arrang
 \begin{example}
 For the arrangement~$\arrangement$ of $5$ hyperplanes of \cref{fig:arrangement}, we have
 \[
-\mobPol = x^2y^2 - 5x^2y + 6x^2 + 5xy - 10x + 4
+\mobPol = x^2y^2 - 5x^2y + 6x^2 + 5xy - 10x + 4 \, ,
 \]
 so that
 \begin{align*}
@@ -107,46 +101,25 @@ so that
 \end{figure}
 \end{example}
 
+\begin{remark}
+\label{rem:characteristicPolynomial}
+The coefficient of~$x^d$ in the M\"obius polynomial~$\mobPol$ gives the more classical \defn{characteristic polynomial}
+\[
+\charPol \eqdef [x^d] \, \mobPol = \sum_F \mu_{\flatPoset}(\R^d,F) \, y^{\dim(F)}.
+\]
+By \cref{thm:Zaslavsky}, we thus have
+\[
+f_d(\arrangement) = (-1)^d \, \charPol[\arrangement][-1] 
+\qquad\text{and}\qquad
+b_d(\arrangement) = (-1)^d \, \charPol[\arrangement][1].
+\]
+\end{remark}
+
 \subsection{The braid arrrangement}
 \label{subsec:braidArrangement}
 
 We now briefly recall the classical combinatorics of the braid arrangement.
 \vincent{add refs?}
-
-\begin{definition}
-Fix~$n \ge 1$ and denote by~$\HH$ the hyperplane of~$\R^n$ defined by~$\sum_{i = 1}^n x_i = 0$.
-The \defn{braid arrangement}~$\braidArrangement$ is the arrangement of the hyperplanes~$\set{\b{x} \in \HH}{x_i = x_j}$ for all~$1 \le i < j \le n$.
-\end{definition}
-
-\begin{remark}
-Note that we have decided to work in the space~$\HH$ rather than in the space~$\R^n$.
-The advantage is that the braid arrangement is essential, and we can speak of its vertices.
-Working in~$\R^n$ would change vertices to rays, and would multiplie all M\"obius polynomials by a factor~$xy$.
-\end{remark}
-
-The combinatorics of the braid arrangement~$\braidArrangement$ is well-known.
-It has a $k$-dimensional flat~$\set{\b{x} \in \R^n}{x_i = x_j \text{ for all } i, j \in p \in \pi}$ for each set partition~$\pi$ of~$[n]$ into $k+1$ parts.
-The flat poset~$\flatPoset[\braidArrangement]$ is thus the refinement poset~$\partitionPoset$ on partitions of~$[n]$ (where a partition~$\pi$ is smaller than a partition~$\omega$ if each part of~$\pi$ is contained in a part of~$\omega$).
-For instance, \cref{fig:intersectionPosetBraidArrangement3,fig:intersectionPosetBraidArrangement4} illustrate the flat posets of the braid arrangements~$\braidArrangement[3]$ and~$\braidArrangement[4]$.
-Its M\"obius function is given by
-\[
-\mu_{\partitionPoset}(\pi, \omega) = \prod_{p \in \omega} (-1)^{\#\pi[p]-1}(\#\pi[p]-1)!
-\]
-where~$\pi[p]$ denotes the restriction of the partition~$\pi$ to the part~$p$ of the partition~$\omega$.
-See for instance \cite{Birkhoff, Rota}.
-The M\"obius polynomial of the braid arrangement~$\braidArrangement$ is given by
-\[
-\mobPol[\braidArrangement] = \sum_{k \in [n]} x^{k-1} S(n,k) \prod_{i \in [k-1]} (y-i)
-\]
-where~$S(n,k)$ denotes the Stirling number of second kind (\OEIS{A008277}), \ie the number of partitions of~$n$ into~$k$ parts.
-For instance
-\begin{align*}
-\mobPol[{\braidArrangement[1]}] & = 1 \\
-\mobPol[{\braidArrangement[2]}] & = x y - x + 1 = x (y - 1) + 1 \\
-\mobPol[{\braidArrangement[3]}] & = x^2 y^2 - 3 x^2 y + 2 x^2 + 3 x y - 3 x + 1 = x^2 (y - 1) (y - 2) + 3 x (y - 1) + 1\\
-\mobPol[{\braidArrangement[4]}] & = x^3 y^3 - 6 x^3 y^2 + 11 x^3 y - 6 x^3 + 6 x^2 y^2 - 18 x^2 y + 12 x^2 + 7 x y - 7 x + 1 \\
-& = x^3 (y - 1) (y - 2) (y - 3) + 6 x^2 (y - 1) (y - 2) + 7 x (y - 1) + 1.
-\end{align*}
 
 %\begin{figure}
 %	\centerline{\includegraphics[scale=.9]{figures/intersectionPosetBraidArrangement3Full}}
@@ -156,24 +129,66 @@ For instance
 
 \begin{figure}
 	\centerline{\includegraphics[scale=.9]{figures/intersectionPosetBraidArrangement3}}
-	\caption{The flat poset of the braid arrangement $\braidArrangement[3]$, where flats are represented as intersections of hyperplanes (left) and as partitions (right).}
+	\caption{The flat poset of the braid arrangement $\braidArrangement[3]$, where flats are represented as intersections of hyperplanes (left) or as partitions of~$[3]$ (right).}
 	\label{fig:intersectionPosetBraidArrangement3}
 \end{figure}
 
 \begin{figure}
 	\centerline{\includegraphics[scale=.26]{figures/intersectionPosetBraidArrangement4}}
-	\caption{The flat poset of the braid arrangement $\braidArrangement[4]$, where flats are represented as intersections of hyperplanes (top) and as partitions (bottom).}
+	\caption{The flat poset of the braid arrangement $\braidArrangement[4]$, where flats are represented as intersections of hyperplanes (top) or as partitions of~$[4]$ (bottom).}
 	\label{fig:intersectionPosetBraidArrangement4}
 \end{figure}
 
 \vincent{Conceptually, it would be nicer in \cref{fig:intersectionPosetBraidArrangement4} to place the numbers $1,2,3,4$ on the vertices of the regular tetrahedron corresponding to the braid arrangement (as is done in \cref{fig:intersectionPosetBraidArrangement3}). However, this is visually not as nice.}
 
+\begin{definition}
+Fix~$n \ge 1$ and denote by~$\HH$ the hyperplane of~$\R^n$ defined by~$\sum_{i = 1}^n x_i = 0$.
+The \defn{braid arrangement}~$\braidArrangement$ is the arrangement of the hyperplanes~$\set{\b{x} \in \HH}{x_i = x_j}$ for all~$1 \le i < j \le n$.
+\end{definition}
+
+\begin{remark}
+\label{rem:essential}
+Note that we have decided to work in the space~$\HH$ rather than in the space~$\R^n$.
+The advantage is that the braid arrangement~$\braidArrangement$ is essential, so that we can speak of its vertices.
+Working in~$\R^n$ would change vertices to rays, and would multiply all M\"obius polynomials by a factor~$xy$.
+\end{remark}
+
+The combinatorics of the braid arrangement~$\braidArrangement$ is well-known.
+It has a $k$-dimensional flat~$\set{\b{x} \in \R^n}{x_i = x_j \text{ for all } i, j \in p \in \pi}$ for each set partition~$\pi$ of~$[n]$ into $k+1$ parts.
+The flat poset~$\flatPoset[\braidArrangement]$ is thus the refinement poset~$\partitionPoset$ on set partitions of~$[n]$ (where a partition~$\pi$ is smaller than a partition~$\omega$ if each part of~$\pi$ is contained in a part of~$\omega$).
+For instance, \cref{fig:intersectionPosetBraidArrangement3,fig:intersectionPosetBraidArrangement4} illustrate the flat posets of the braid arrangements~$\braidArrangement[3]$ and~$\braidArrangement[4]$.
+The M\"obius function of~$\partitionPoset$ is given by
+\[
+\mu_{\partitionPoset}(\pi, \omega) = \prod_{p \in \omega} (-1)^{\#\pi[p]-1}(\#\pi[p]-1)! \, ,
+\]
+where~$\pi[p]$ denotes the restriction of the partition~$\pi$ to the part~$p$ of the partition~$\omega$, and $\#\pi[p]$ denotes its number of parts.
+See for instance \cite{Birkhoff, Rota}.
+The M\"obius polynomial of the braid arrangement~$\braidArrangement$ is given by
+\[
+\mobPol[\braidArrangement] = \sum_{k \in [n]} x^{k-1} S(n,k) \prod_{i \in [k-1]} (y-i) \, ,
+\]
+where~$S(n,k)$ denotes the Stirling number of second kind \OEIS{A008277}, \ie the number of set partitions of~$[n]$ into~$k$ parts.
+For instance
+\begin{align*}
+\mobPol[{\braidArrangement[1]}] & = 1 \\
+\mobPol[{\braidArrangement[2]}] & = x y - x + 1 = x (y - 1) + 1 \\
+\mobPol[{\braidArrangement[3]}] & = x^2 y^2 - 3 x^2 y + 2 x^2 + 3 x y - 3 x + 1 = x^2 (y - 1) (y - 2) + 3 x (y - 1) + 1\\
+\mobPol[{\braidArrangement[4]}] & = x^3 y^3 - 6 x^3 y^2 + 11 x^3 y - 6 x^3 + 6 x^2 y^2 - 18 x^2 y + 12 x^2 + 7 x y - 7 x + 1 \\
+& = x^3 (y - 1) (y - 2) (y - 3) + 6 x^2 (y - 1) (y - 2) + 7 x (y - 1) + 1.
+\end{align*}
+In particular, the characteristic polynomial of the braid arrangement~$\braidArrangement$ is given by
+\[
+\charPol[\braidArrangement] = (y-1) (y-2) \dots (y-n-1).
+\]
+Working in~$\R^n$ rather than in~$\HH$ would lead to an additional~$y$ factor in this formula, which might be more familiar to the reader
+See \cref{rem:essential}.
+
 \subsection{The $(\ell,n)$-braid arrrangement}
 \label{subsec:multiBraidArrangement}
 
-We now focus on the following specific hyperplane arrangements, illustrated in \cref{fig:multiBraidArrangements}, and whose face numbers are given in \cref{table:fvectorMultiBraidArrangements}.
+We now focus on the following specific hyperplane arrangements, illustrated in \cref{fig:multiBraidArrangements}.
 
-\begin{figure}[h]
+\begin{figure}[t]
 	\centerline{
 	\begin{tabular}{c@{\hspace{.7cm}}c@{\hspace{.7cm}}c@{\hspace{.7cm}}c}
 		\includegraphics[scale=.4]{multiBraidArrangement1}
@@ -190,6 +205,79 @@ We now focus on the following specific hyperplane arrangements, illustrated in \
 	\caption{The $(\ell,3)$-braid arrangements for~$\ell \in [4]$.}
 	\label{fig:multiBraidArrangements}
 \end{figure}
+
+\begin{definition}
+For any integers~$\ell,n \geq 1$, the \defn{$(\ell,n)$-braid arrangement}~$\multiBraidArrangement$ is the arrangement obtained as the union of $\ell$ generically translated copies of the braid arrangement~$\braidArrangement$.
+\end{definition}
+
+\begin{definition}
+The \defn{intersection hypergraph} of a $\ell$-tuple~$\b{F} \eqdef (F_1, \dots, F_\ell)$ of set partitions of~$[n]$ is the $\ell$-regular $\ell$-partite hypergraph on all parts of all the partitions~$F_i$ for~${i \in [\ell]}$, with an hyperedge connecting the parts containing~$j$  for each~$j \in [n]$.
+A \defn{$(\ell,n)$-partition forest} (resp.~\defn{$(\ell,n)$-partition tree}) is a $\ell$-tuple~$\b{F} \eqdef (F_1, \dots, F_\ell)$ of set partitions of~$[n]$ whose intersection hypergraph is a hyperforest (resp.~hypertree).
+The \defn{dimension} of~$\b{F}$ is~$\smash{{\dim(\b{F}) \eqdef n - 1 - \ell n + \sum_{i \in [\ell]} \#F_i}}$.
+See \cref{fig:forests}.
+The \defn{$(\ell,n)$-partition forest poset} is the poset~$\forestPoset$ on $(\ell,n)$-partition forests ordered by componentwise refinement.
+In other words, $\forestPoset$ is the subposet of the $\ell$\ordinal{} Cartesian power of the partition poset~$\partitionPoset$ induced by $(\ell,n)$-partition forests.
+Note that the maximal elements of~$\forestPoset$ are the $(\ell, n)$-partition trees.
+%
+\begin{figure}
+	\centerline{\includegraphics[scale=.9]{forests}}
+	\caption{Some $(3,6)$-partition forests (top) with their intersection hypergraphs (middle) and the corresponding labeled $(3,6)$-rainbow forests (bottom). The last two are trees. The order of the colors is red, green, blue.}
+	\label{fig:forests}
+\end{figure}
+\end{definition}
+
+The following statement is illustrated in \cref{fig:intersectionPosetMultiBraidArrangement32}.
+%
+\begin{figure}
+	\centerline{\includegraphics[scale=.9]{figures/intersectionPosetMultiBraidArrangement32Full}}
+	\caption{The $(2,3)$-braid arrangement $\multiBraidArrangement[3][2]$ (left), and its flat poset (right), where flats are represented as intersections of hyperplanes (top), as $(2,3)$-partitions forests (middle), and as labeled $(2,3)$-rainbow forests (bottom).}
+	\label{fig:intersectionPosetMultiBraidArrangement32}
+\end{figure}
+
+\begin{proposition}
+\label{prop:flatPosetMultiBraidArrangement}
+The flat poset of the $(\ell,n)$-braid arrangement~$\multiBraidArrangement$ is isomorphic to the $(\ell,n)$-partition forest poset.
+\end{proposition}
+
+\begin{proof}
+\vincent{TODO. Don't forget to say that it sends dimension to dimension.}
+\end{proof}
+
+We thus derive the M\"obius polynomial of the $(\ell,n)$-braid arrangement~$\multiBraidArrangement$ by \cref{def:MobiusPolynomial,prop:flatPosetMultiBraidArrangement}.
+
+\begin{theorem}
+\label{thm:MobiusPolynomialMultiBraidArrangement}
+The M\"obius polynomial of the $(\ell,n)$-braid arrangement~$\multiBraidArrangement$ is given by
+\[
+\mobPol[\multiBraidArrangement] = x^{n-1-\ell n} y^{n-1-\ell n} \sum_{\b{F} \le \b{G}} \prod_{i \in [\ell]} x^{\#F_i} y^{\#G_i} \prod_{p \in G_i} (-1)^{\#F_i[p]-1} (\# F_i[p]-1)! \; ,
+\]
+where~$\b{F} \le \b{G}$ ranges over all intervals of the $(\ell,n)$-partition forest poset~$\forestPoset$, and~$F_i[p]$ denotes the restriction of the partition~$F_i$ to the part~$p$ of~$G_i$.
+\end{theorem}
+
+\begin{proof}
+Observe that for~$\b{F} \eqdef (F_1, \dots, F_\ell)$ and~$\b{G} \eqdef (G_1, \dots, G_\ell)$ in~$\forestPoset$, we have
+\[
+[\b{F}, \b{G}] = \prod_{i \in [\ell]} [F_i, G_i] \simeq \prod_{i \in [\ell]} \prod_{p \in G_i} \partitionPoset[{\#F_i[p]}].
+\]
+Recall that the M\"obius function is multiplicative:
+\(
+\mu_{P \times Q} \big( (p,q), (p’,q’) \big) = \mu_P(p,p’) \cdot \mu_Q(q,q’),
+\)
+for all~$p, p' \in P$ and~$q, q' \in Q$.
+Hence, we obtain that
+\[
+\mu_{\forestPoset}(\b{F}, \b{G}) = \prod_{i \in [\ell]} \prod_{p \in G_i} (-1)^{\#F_i[p]-1} (\# F_i[p]-1)! \, .
+\]
+Hence, we derive from \cref{def:MobiusPolynomial,prop:flatPosetMultiBraidArrangement} that
+\begin{align*}
+\mobPol[\multiBraidArrangement] 
+& = \sum_{\b{F} \le \b{G}} \mu_{\forestPoset}(\b{F}, \b{G}) \, x^{\dim(\b{F})} \, y^{\dim(\b{G})} \\
+& = x^{n-1-\ell n} y^{n-1-\ell n} \sum_{\b{F} \le \b{G}} \prod_{i \in [\ell]} x^{\#F_i} y^{\#G_i} \prod_{p \in G_i} (-1)^{\#F_i[p]-1} (\# F_i[p]-1)! \, .
+\qedhere
+\end{align*}
+\end{proof}
+
+From \cref{thm:Zaslavsky,thm:MobiusPolynomialMultiBraidArrangement}, we thus obtain the face numbers and bounded face numbers of~$\multiBraidArrangement$, whose first few values are gathered in \cref{table:fvectorMultiBraidArrangements}.
 
 %\begin{table}
 %\centerline{
@@ -359,82 +447,13 @@ We now focus on the following specific hyperplane arrangements, illustrated in \
 	\label{table:fvectorMultiBraidArrangements}
 \end{table}
 
-\begin{definition}
-For any integers~$\ell,n \geq 1$, the \defn{$(\ell,n)$-braid arrangement}~$\multiBraidArrangement$ is the arrangement obtained as the union of $\ell$ generically translated copies of the braid arrangement~$\braidArrangement$.
-\end{definition}
-
-\begin{figure}
-	\centerline{\includegraphics[scale=.9]{figures/intersectionPosetMultiBraidArrangement32Full}}
-	\caption{The $(2,3)$-braid arrangement $\multiBraidArrangement[3][2]$ (left), and its flat poset (right), where flats are represented as intersections of hyperplanes (top), as $(2,3)$-partitions forests (middle), and as labeled $(2,3)$-rainbow forests (bottom).}
-	\label{fig:MultiBraidArrangement32}
-\end{figure}
-
-\begin{definition}
-The \defn{intersection hypergraph}~$I(F_1, \dots, F_\ell)$ of a $\ell$-tuple of partitions of~$[n]$ is the $\ell$-regular $\ell$-partite hypergraph on all parts of all the partitions~$F_i$, with an hyperedge for all~$i \in [n]$ connecting the parts containing~$i$.
-A \defn{$(\ell,n)$-partition forest} (resp.~\defn{$(\ell,n)$-partition tree}) is a $\ell$-tuple~$\b{F} \eqdef (F_1, \dots, F_\ell)$ of partitions of~$[n]$ whose intersection hypergraph is a hyperforest (resp.~hypertree).
-The \defn{dimension} of~$\b{F}$ is~$\dim(\b{F}) \eqdef n - 1 - \ell n + \sum_{i \in [\ell]} \#F_i$.
-See \cref{fig:forests}.
-The \defn{$(\ell,n)$-partition forest poset} is the poset~$\forestPoset$ on $(\ell,n)$-partition forests ordered by componentwise refinement.
-In other words, $\forestPoset$ is the subposet of the $\ell$th Cartesian power of the partition poset~$\partitionPoset$ induced by $(\ell,n)$-partition forests.
-Note that the maximal elements of~$\forestPoset$ are the $(\ell, n)$-partition trees.
-%
-\begin{figure}
-	\centerline{\includegraphics[scale=.9]{forests}}
-	\caption{Some $(3,6)$-partition forests (top) with their intersection hypergraphs (middle) and the corresponding $(3,6)$-rainbow forests (bottom). The last two are trees. The order of the colors is red, green, blue.}
-	\label{fig:forests}
-\end{figure}
-\end{definition}
-
-\begin{proposition}
-\label{prop:flatPosetMultiBraidArrangement}
-The flat poset of the $(\ell,n)$-braid arrangement~$\multiBraidArrangement$ is isomorphic to the $(\ell,n)$-partition forest poset.
-\end{proposition}
-
-\begin{proof}
-\vincent{TODO. Don't forget to say that it sends dimension to dimension.}
-\end{proof}
-
-\begin{theorem}
-\label{thm:MobiusPolynomialMultiBraidArrangement}
-The M\"obius polynomial of the $(\ell,n)$-braid arrangement~$\multiBraidArrangement$ is given by
-\[
-\mobPol[\multiBraidArrangement] = x^{n-1-\ell n} y^{n-1-\ell n} \sum_{\b{F} \le \b{G}} \prod_{i \in [\ell]} x^{\#F_i} y^{\#G_i} \prod_{p \in G_i} (-1)^{\#F_i[p]-1} (\# F_i[p]-1)! \; ,
-\]
-where~$\b{F} \le \b{G}$ ranges over all intervals of the $(\ell,n)$-partition forest poset~$\forestPoset$, and~$F_i[p]$ denotes the restriction of the partition~$F_i$ to the part~$p$ of~$G_i$.
-\end{theorem}
-
-\begin{proof}
-Observe that for~$\b{F} = (F_1, \dots, F_\ell)$ and~$\b{G} = (G_1, \dots, G_\ell)$ in~$\forestPoset$, we have
-\[
-[\b{F}, \b{G}] = \prod_{i \in [\ell]} [F_i, G_i] \simeq \prod_{i \in [\ell]} \prod_{p \in G_i} \partitionPoset[{\#F_i[p]}].
-\]
-As the M\"obius function is multiplicative, that is,
-\(
-\mu_{P \times Q} \big( (p,q), (p’,q’) \big) = \mu_P(p,p’) \cdot \mu_Q(q,q’),
-\)
-we obtain that
-\[
-\mu_{\forestPoset}(\b{F}, \b{G}) = \prod_{i \in [\ell]} \prod_{p \in G_i} (-1)^{\#F_i[p]-1} (\# F_i[p]-1)!
-\]
-Hence
-\begin{align*}
-\mobPol[\multiBraidArrangement] 
-& = \sum_{\b{F} \le \b{G}} \mu_{\forestPoset}(\b{F}, \b{G}) \, x^{\dim(\b{F})} \, y^{\dim(\b{G})} \\
-& = x^{n-1-\ell n} y^{n-1-\ell n} \sum_{\b{F} \le \b{G}} \prod_{i \in [\ell]} x^{\#F_i} y^{\#G_i} \prod_{p \in G_i} (-1)^{\#F_i[p]-1} (\# F_i[p]-1)!.
-\qedhere
-\end{align*}
-\end{proof}
-
-We thus obtain the following statament from \cref{thm:MobiusPolynomialMultiBraidArrangement,thm:Zaslavsky}.
-The face numbers and bounded face numbers of~$\multiBraidArrangement$ for~$\ell, n \in [4]$ are gathered in \cref{table:fvectorMultiBraidArrangements}.
-
 \begin{corollary}
 \label{coro:fbvectorsMultiBraidArrangement}
 The $f$- and $b$-polynomials of the $(\ell,n)$-braid arrangement~$\multiBraidArrangement$ are given by
 \begin{align*}
 \fPol[\multiBraidArrangement] & = x^{n-1-\ell n}\sum_{\b{F} \le \b{G}} \prod_{i \in [\ell]} x^{\#F_i} \prod_{p \in G_i} (\# F_i[p]-1)!\\
 \text{and}\qquad
-\bPol[\multiBraidArrangement] & = (-1)^\ell x^{n-1-\ell n} \sum_{\b{F} \le \b{G}} \prod_{i \in [\ell]} x^{\#F_i} \prod_{p \in G_i} -(\# F_i[p]-1)!
+\bPol[\multiBraidArrangement] & = (-1)^\ell x^{n-1-\ell n} \sum_{\b{F} \le \b{G}} \prod_{i \in [\ell]} x^{\#F_i} \prod_{p \in G_i} -(\# F_i[p]-1)! \, ,
 \end{align*}
 where~$\b{F} \le \b{G}$ ranges over all intervals of the $(\ell,n)$-partition forest poset~$\forestPoset$, and~$F_i[p]$ denotes the restriction of the partition~$F_i$ to the part~$p$ of~$G_i$.
 \end{corollary}
@@ -453,18 +472,18 @@ For~$n = 2$, we have
 \bPol[{\multiBraidArrangement[2][\ell]}] = (\ell-1)x+\ell.
 \]
 The case~$n = 3$ is already more interesting.
-Consider the partitions~$P \eqdef \big\{ \{1\}, \{2\}, \{3\} \big\}$, $Q_i \eqdef \big\{ \{i\}, [3] \ssm \{i\} \big\}$, and~$R \eqdef \big\{ [3] \big\}$.
+Consider the partitions~$P \eqdef \big\{ \{1\}, \{2\}, \{3\} \big\}$, $Q_i \eqdef \big\{ \{i\}, [3] \ssm \{i\} \big\}$ for~$i \in [3]$, and~$R \eqdef \big\{ [3] \big\}$.
 Observe that the $(\ell,3)$-partition forests are all of the form
 \begin{gather*}
 \b{F} \eqdef P^\ell,
-\quad
+\;\;
 \b{G}_i^p \eqdef P^p Q_i P^{\ell-p-1}, % \text{ for } p \le \ell-1 \text{ and } i \in [3],
-\quad
+\;\;
 \b{H}_{i,j}^{p,q} \eqdef P^p Q_i P^{\ell-p-q-2} Q_j P^q \;\text{($i \ne j$)} % \text{ for } p + q \le \ell-2 \text{ and } i \ne j \in [3]
-\quad\text{or}\quad
+\;\;\text{or}\;\;
 \b{K}^p \eqdef P^p R P^{\ell-p-1}. % \text{ for } p \le \ell-1.
 \end{gather*}
-(where we write a tuple of partitions of~$[3]$ as a word on~$\{P, Q_i, R\}$, and $p$ and $q$ are such that the total length is~$\ell$).
+(where we write a tuple of partitions of~$[3]$ as a word on~$\{P, Q_1, Q_2, Q_3, R\}$, and $p$ and $q$ are such that the total length is~$\ell$).
 %\begin{gather*}
 %\b{F} \eqdef (\underbrace{P, \dots, P}_\ell), \\
 %\b{G}_i^p \eqdef (\underbrace{P, \dots, P}_p, Q_i, \underbrace{P, \dots, P}_{\ell-p-1}) \text{ for } p \le \ell-1 \text{ and } i \in [3],
@@ -486,7 +505,7 @@ Hence, we have
 \text{and}\qquad
 \bPol[{\multiBraidArrangement[3][\ell]}] & = (3 \ell^2 - 4 \ell + 1) x^2 + 6 \ell (\ell - 1) x + \ell (3 \ell - 2).
 \end{align*}
-Note that~$3 \ell^2 + 2 \ell + 1$ is~\OEIS{A056109}, that~$\ell (3 \ell - 2)$ is~\OEIS{A000567}, and that~$3 \ell^2 - 4 \ell + 1$ is~\OEIS{A045944}.
+Observe that~$3 \ell^2 + 2 \ell + 1$ is~\OEIS{A056109}, that~$\ell (3 \ell - 2)$ is~\OEIS{A000567}, and that ${3 \ell^2 - 4 \ell + 1}$ is~\OEIS{A045944}.
 \vincent{There is a weird connection between the first and the last. Namely, $3 \ell^2 - 4 \ell + 1 = 3 (\ell - 1)^2 + 2 (\ell - 1)$. Is there a bijective explanation on the arrangements?}
 \end{example}
 
@@ -502,12 +521,12 @@ In order to obtain more explicit formulas for the number of vertices and regions
 \begin{definition}
 \label{def:rainbowForest}
 A \defn{$\ell$-rainbow coloring} of a rooted plane forest~$F$ is an assignment of colors of~$[\ell]$ to the non-root nodes of~$F$ such that
-\begin{itemize}
+\begin{enumerate}[(i)]
 \item there is no monochromatic edge,
 \item the colors of siblings are increasing from left to right.
-\end{itemize}
-We denote by~$|F| = n$ the number of nodes of~$F$ and by~$\#F$ the number of trees of the forest~$F$ (\ie its number of connected components).
-A \defn{$(\ell,n)$-rainbow forest} (resp.~\defn{tree}) is a $\ell$-rainbow colored forest (resp.~tree) with $|F| = n$ nodes.
+\end{enumerate}
+We denote by~$\|F\|$ the number of nodes of~$F$ and by~$\#F$ the number of trees of the forest~$F$ (\ie its number of connected components).
+A \defn{$(\ell,n)$-rainbow forest} (resp.~\defn{tree}) is a \mbox{$\ell$-rainbow} colored forest (resp.~tree) with $\|F\| = n$ nodes.
 We denote by~$\rainbowForests$ (resp.~$\rainbowTrees$) the set of $(\ell,n)$-rainbow forests (resp.~trees), and set~$\rainbowForests[][\ell] \eqdef \bigsqcup_n \rainbowForests$ (resp.~$\rainbowTrees[][\ell] \eqdef \bigsqcup_n \rainbowTrees$).
 \end{definition}
 
@@ -527,7 +546,7 @@ This classical map is a bijection from $\ell$-rainbow trees to a $\ell$-ary tree
 %
 \begin{figure}
 	\centerline{\includegraphics[scale=.7]{rainbowTrees}}
-	\caption{The $14$ $(2,4)$-rainbow trees (top) and the corresponding $2$-ary trees (bottom). The order of the colors is red, blue.}
+	\caption{The $14$ $(2,4)$-rainbow trees (top) and $14$ binary trees (bottom), and the simple bijection between them (middle). The order of the colors is red, blue.}
 	\label{fig:rainbowTrees}
 \end{figure}
 \end{proof}
@@ -561,6 +580,14 @@ F_\ell(z) = 1 + z \, F_\ell(z)^\ell.
 \end{table}
 
 \begin{definition}
+For a rainbow forest~$F$, we define
+\[
+\omega(F) \eqdef \prod_{i \in [\ell]} \prod_{N \in F} \#C_i(N)! \, ,
+\]
+where~$N$ ranges over all nodes of~$F$ and~$C_i(N)$ denotes the children of~$N$ colored by~$i$.
+\end{definition}
+
+\begin{definition}
 \label{def:labelingRainbowForest}
 A \defn{labeling} of a $(\ell,n)$-rainbow forest~$F$ is a bijective map between from the nodes of~$F$ to~$[n]$ such that
 \begin{enumerate}[(i)]
@@ -569,51 +596,44 @@ A \defn{labeling} of a $(\ell,n)$-rainbow forest~$F$ is a bijective map between 
 \end{enumerate}
 \end{definition}
 
-\begin{definition}
-For a rainbow forest~$F$, we define
-\[
-\omega(F) \eqdef \prod_{i \in [\ell]} \prod_{N \in F} \#C_i(N)!
-\]
-where~$N$ ranges over all nodes of~$F$ and~$C_i(N)$ denotes the children of~$N$ colored by~$i$.
-\end{definition}
-
 \begin{lemma}
 \label{lem:labelingRainbowForest}
 The number~$\lambda(F)$ of labelings of a $(\ell,n)$-rainbow forest~$F$ is given by
 \[
-\lambda(F) = \frac{n!}{\omega(F) \prod\limits_{T \in F} |T|}.
+\lambda(F) = \frac{n!}{\omega(F) \prod\limits_{T \in F} \|T\|} \, .
 \]
 \end{lemma}
 
 \begin{proof}
-Out of all~$n!$ bijective maps from the nodes of~$F$ to~$n$, only~$1/\prod_{T \in F} |T|$ satisfy Condition~(i) of \cref{def:labelingRainbowForest}, and only $1/\prod_{i \in [\ell]} \prod_{N \in F} \#C_i(N)! = 1/\omega(F)$ satisfy Condition~(ii) of \cref{def:labelingRainbowForest}.
+Out of all~$n!$ bijective maps from the nodes of~$F$ to~$[n]$, only~$1/\prod_{T \in F} \|T\|$ satisfy Condition~(i) of \cref{def:labelingRainbowForest}, and only $1/\prod_{i \in [\ell]} \prod_{N \in F} \#C_i(N)! = 1/\omega(F)$ satisfy Condition~(ii) of \cref{def:labelingRainbowForest}.
 \end{proof}
 
 The following statement is illustrated in \cref{fig:forests}.
 
 \begin{proposition}
 \label{prop:bijectionForests}
-There is a bijection from $(\ell,n)$-partition forests to labeled $(\ell,n)$-rainbow forests, such that if~$\b{F}$ is sent to~$F$, then
+There is a bijection from $(\ell,n)$-partition forests to labeled $(\ell,n)$-rainbow forests, such that if the partition forest~$\b{F}$ is sent to the labeled rainbow forest~$F$, then
 \[
 \dim(\b{F}) = \#F-1
 \qquad\text{and}\qquad
-\mu_{\forestPoset}(\hat 0, \b{F}) = (-1)^{n-\#F} \, \omega(F)
+\mu_{\forestPoset}(\HH, \b{F}) = (-1)^{n-\#F} \, \omega(F).
 \]
 \end{proposition}
 
 \begin{proof}
-From a labeled $(\ell,n)$-rainbow forest~$F$, we construct a $(\ell,n)$-partition forest~$\b{F} \eqdef (F_1, \dots, F_\ell)$ whose $i$th partition~$F_i$ has a part~$\{N\} \cup C_i(N)$ for each node~$N$ of~$F$.
+From a labeled $(\ell,n)$-rainbow forest~$F$, we construct a $(\ell,n)$-partition forest~$\b{F} \eqdef (F_1, \dots, F_\ell)$ whose $i$\ordinal{} partition~$F_i$ has a part~$\{N\} \cup C_i(N)$ for each node~$N$ of~$F$ not colored~$i$.
+Condition~(i) of \cref{def:rainbowForest} ensures that each $F_i$ is indeed a partition.
 
 Conversely, start from a $(\ell,n)$-partition forest~$\b{F} \eqdef (F_1, \dots, F_i)$.
 Consider the colored clique graph~$K_{\b{F}}$ on~$[n]$ obtained by replacing each part in~$F_i$ by a clique of edges colored by~$i$.
-For each~$1 < i \le n$, there is a unique shortest path in~$K_{\b{F}}$ to the vertex~$1$.
-Define the parent~$p$ of~$i$ to be the next vertex along this path, and color~$i$ by the color of the edge between~$i$ and~$p$.
+For each~$1 < j \le n$, there is a unique shortest path in~$K_{\b{F}}$ from the vertex~$j$ to the vertex~$1$.
+Define the parent~$p$ of~$j$ to be the next vertex along this path, and color the node~$j$ by the color of the edge between~$j$ and~$p$.
 This defines a labeled $(\ell,n)$-rainbow forest~$F$.
 
 Finally, observe that
 \begin{gather*}
 \dim(\b{F}) = n - 1 - \ell n + \sum_{i \in [\ell]} \#F_i = \#F-1, \qquad\text{and} \\
-\mu_{\forestPoset}(\hat 0, \b{F}) = \prod\limits_{i \in [\ell]} \prod\limits_{p \in F_i} (-1)^{\#p-1} (\#p-1) = \prod\limits_{i \in [\ell]} \prod\limits_{N \in F} (-1)^{\#C_i(N)} \#C_i(N)! = (-1)^{n-\#F} \, \omega(F).
+\mu_{\forestPoset}(\HH, \b{F}) = \prod\limits_{i \in [\ell]} \prod\limits_{p \in F_i} (-1)^{\#p-1} (\#p-1) = \prod\limits_{i \in [\ell]} \prod\limits_{N \in F} (-1)^{\#C_i(N)} \#C_i(N)! = (-1)^{n-\#F} \, \omega(F).
 \qedhere
 \end{gather*}
 \end{proof}
@@ -621,7 +641,7 @@ Finally, observe that
 \subsection{Enumeration of vertices and regions of $\multiBraidArrangement$}
 \label{subsec:verticesFacetsMultiBraidArrangement}
 
-We now use our labeled $(\ell,n)$-rainbow forests of \cref{subsec:rainbowForests} to derive more explicit formulas for the number of vertices and regions of the $(\ell,n)$-braid arrangement~$\multiBraidArrangement$.
+We now use the labeled $(\ell,n)$-rainbow forests of \cref{subsec:rainbowForests} to derive more explicit formulas for the number of vertices and regions of the $(\ell,n)$-braid arrangement~$\multiBraidArrangement$.
 We start with the number of vertices of~$\multiBraidArrangement$, whose first values are gathered in \cref{table:verticesMultiBraidArrangement}.
 
 \begin{table}
@@ -657,21 +677,25 @@ f_0(\multiBraidArrangement) = \ell \big( (\ell-1) n + 1 \big)^{n-2}.
 By \cref{prop:flatPosetMultiBraidArrangement,prop:bijectionForests}, we just need to count the labeled $(\ell,n)$-rainbow trees.
 A common reasoning for counting Cayley trees is the use of its Prüfer code defined by recursively pruning the smallest leaf while writing down the label of its parent.
 This bijection can be adapted to colored Cayley trees by writing down the label of the parent colored by the color of the pruned leaf.
-We get a colored word of length $n-1$.
-Their are two possibilities:
+This leads to a bijection with certain colored words of length $n-1$.
+Namely, there are two possibilities:
 \begin{itemize}
 \item either the pruned leaf is attached to the node~$1$ and it can have all $\ell$ colors,
 \item or it is attached to one of the $n-1$ other nodes and it can only have $\ell-1$ colors.
 \end{itemize}
 Note that the last letter in the Prüfer code (obtained by removing the last edge) is necessarily the root $1$, with $\ell$ possible different colors.
-Hence, there are $\big( \ell+(n-1)(\ell-1) \big)^{n-2} \ell$ such words.
+Hence, there are 
+\[
+\big( \ell+(n-1)(\ell-1) \big)^{n-2} \ell = \ell \big( (\ell-1) n + 1 \big)^{n-2}
+\]
+such words.
 Similar ideas where used in~\cite{Lewis}.
 \vincent{Improve citation}
 \end{proof}
 
 \begin{theorem}
 \label{thm:verticesRefinedMultiBraidArrangement}
-For any~$k_1, \dots, k_\ell$ such that~$0 \le k_i \le n-1$ for~$i \in [\ell]$ and~${\sum_{i=1}^\ell k_i = n-1}$, the number of vertices~$v$ of the $(\ell,n)$-braid arrangement~$\multiBraidArrangement$ such that the smallest flat of the $i$th copy of~$\braidArrangement$ containing~$v$ has dimension~$n-k_i-1$ is given by
+For any~$k_1, \dots, k_\ell$ such that~$0 \le k_i \le n-1$ for~$i \in [\ell]$ and~${\sum_{i=1}^\ell k_i = n-1}$, the number of vertices~$v$ of the $(\ell,n)$-braid arrangement~$\multiBraidArrangement$ such that the smallest flat of the $i$\ordinal{} copy of~$\braidArrangement$ containing~$v$ has dimension~$n-k_i-1$ is given by
 \[
 n^{\ell-1} \binom{n-1}{k_1, \dots, k_\ell} \prod_{i=1}^\ell (n-k_i)^{k_i-1}.
 \]
@@ -686,42 +710,42 @@ Finally, the possible labelings are counted by the multinomial coefficient~$\bin
 
 \begin{theorem}
 \label{thm:topCoefficientMobiusPolynomialMultiBraidArrangement}
-The coefficient of~$x^{n-1}$ in the M\"obius polynomial~$\mobPol[{\multiBraidArrangement}]$ of the $(\ell,n)$-braid arrangement~$\multiBraidArrangement$ is given by
+The characteristic polynomial~$\charPol[\multiBraidArrangement]$ of the $(\ell,n)$-braid arrangement~$\multiBraidArrangement$ is given by
 \[
-[x^{n-1}] \, \mobPol[{\multiBraidArrangement}] = \frac{(-1)^n n!}{y} \, [z^n] \, \exp \bigg( - \sum_{m \ge 1} \frac{F_{\ell,m} \, y \, z^m}{m} \bigg).
+\charPol[\multiBraidArrangement] = \frac{(-1)^n n!}{y} \, [z^n] \, \exp \bigg( - \sum_{m \ge 1} \frac{F_{\ell,m} \, y \, z^m}{m} \bigg) ,
 \]
 where~$\displaystyle F_{\ell,m} \eqdef \frac{1}{(\ell-1)m+1} \binom{\ell m}{m}$ is the Fuss-Catalan number.
 \end{theorem}
 
 \begin{proof}
-By \cref{thm:MobiusPolynomialMultiBraidArrangement,prop:bijectionForests}, the coefficient of~$x^{n-1}$ in the M\"obius polynomial~$\mobPol[{\multiBraidArrangement}]$ is given by
+By \cref{thm:MobiusPolynomialMultiBraidArrangement,prop:bijectionForests}, the characteristic polynomial~$\charPol[\multiBraidArrangement]$ is
 \[
-[x^{n-1}] \, \mobPol[{\multiBraidArrangement}] = \sum_{\b{F} \in \forestPoset} \mu_{\forestPoset}(\hat 0, \b{F}) \, y^{\dim(\b{F})} = \sum_{F \in \rainbowForests} \lambda(F) \, (-1)^{n-\#F} \, \omega(F) \, y^{\#F-1}.
+\charPol[\multiBraidArrangement] = \sum_{\b{F} \in \forestPoset} \mu_{\forestPoset}(\HH, \b{F}) \, y^{\dim(\b{F})} = \sum_{F \in \rainbowForests} \lambda(F) \, (-1)^{n-\#F} \, \omega(F) \, y^{\#F-1}.
 \]
 From \cref{lem:labelingRainbowForest}, we observe that
 \[
-\frac{\lambda(F) \, \omega(F) \, (-y)^{\#F} \, z^{|F|}}{|F|!} = \prod_{T \in F} \frac{-y \, z^{|T|}}{|T|}
+\frac{\lambda(F) \, \omega(F) \, (-y)^{\#F} \, z^{\|F\|}}{\|F\|!} = \prod_{T \in F} \frac{-y \, z^{\|T\|}}{\|T\|} \, ,
 \]
 where $T$ ranges over the trees of~$F$.
 Now using that rainbow forests are exactly sets of rainbow trees, we obtain that
 \[
-\sum_{F \in \rainbowForests[][\ell]} \frac{ \lambda(F) \, \omega(F) \, (-y)^{\#F} \, z^{|F|}}{|F|!} = \sum_{F \in \rainbowForests[][\ell]} \prod_{T \in F} \frac{-y \, z^{|T|}}{|T|} = \exp \bigg( \sum_{T \in \rainbowTrees[][\ell]} \frac{-y \, z^{|T|}}{|T|} \bigg).
+\sum_{F \in \rainbowForests[][\ell]} \frac{ \lambda(F) \, \omega(F) \, (-y)^{\#F} \, z^{\|F\|}}{\|F\|!} = \sum_{F \in \rainbowForests[][\ell]} \prod_{T \in F} \frac{-y \, z^{\|T\|}}{\|T\|} = \exp \bigg( \sum_{T \in \rainbowTrees[][\ell]} \frac{-y \, z^{\|T\|}}{\|T\|} \bigg).
 \]
 From \cref{lem:FussCatalan}, we obtain that
 \[
-\exp \bigg( \sum_{T \in \rainbowTrees[][\ell]} \frac{-y \, z^{|T|}}{|T|} \bigg) = \exp \bigg( - \sum_{m \ge 1} \frac{F_{\ell,m} \, y \, z^m}{m} \bigg).
+\exp \bigg( \sum_{T \in \rainbowTrees[][\ell]} \frac{-y \, z^{\|T\|}}{\|T\|} \bigg) = \exp \bigg( - \sum_{m \ge 1} \frac{F_{\ell,m} \, y \, z^m}{m} \bigg).
 \]
 We conclude that
 \begin{align*}
-[x^{n-1}] \, \mobPol[{\multiBraidArrangement}] 
+\charPol[\multiBraidArrangement] 
 & = \sum_{F \in \rainbowForests}  \lambda(F) \, (-1)^{n-\#F} \, \omega(F) \, y^{\#F-1} \\
-& = \frac{(-1)^n \, n!}{y} [z^n] \sum_{F \in \rainbowForests[][\ell]} \frac{ \lambda(F) \, \omega(F) \, (-y)^{\#F} \, z^{|F|}}{|F|!} \\
+& = \frac{(-1)^n \, n!}{y} [z^n] \sum_{F \in \rainbowForests[][\ell]} \frac{ \lambda(F) \, \omega(F) \, (-y)^{\#F} \, z^{\|F\|}}{\|F\|!} \\
 & = \frac{(-1)^n n!}{y} \, [z^n] \, \exp \bigg( - \sum_{m \ge 1} \frac{F_{\ell,m} \, y \, z^m}{m} \bigg).
 \qedhere
 \end{align*}
 \end{proof}
 
-From \cref{thm:topCoefficientMobiusPolynomialMultiBraidArrangement}, we obtain the number of regions and bounded regions of~$\multiBraidArrangement$, whose first values are gathered in \cref{table:regionsMultiBraidArrangement,table:boundedRegionsMultiBraidArrangement}.
+By \cref{rem:characteristicPolynomial,thm:topCoefficientMobiusPolynomialMultiBraidArrangement}, we obtain the number of regions and bounded regions of~$\multiBraidArrangement$, whose first values are gathered in \cref{table:regionsMultiBraidArrangement,table:boundedRegionsMultiBraidArrangement}.
 
 \begin{table}
 	\centerline{\scalebox{.8}{
@@ -780,11 +804,11 @@ where~$\displaystyle F_{\ell,m} \eqdef \frac{1}{(\ell-1)m+1} \binom{\ell m}{m}$ 
 \end{theorem}
 
 \begin{proof}
-As $\fPol[{\multiBraidArrangement}] = \mobPol[{\multiBraidArrangement}][-x][-1]$ and $\bPol[{\multiBraidArrangement}] = \mobPol[{\multiBraidArrangement}][-x][1]$ by \cref{thm:Zaslavsky}, we obtain from \cref{thm:topCoefficientMobiusPolynomialMultiBraidArrangement} that
+By \cref{rem:characteristicPolynomial}, we obtain from \cref{thm:topCoefficientMobiusPolynomialMultiBraidArrangement} that
 \begin{align*}
-f_{n-1}(\multiBraidArrangement) & = [x^{n-1}] \, \fPol[{\multiBraidArrangement}] = (-1)^{n-1} \, [x^{n-1}] \, \mobPol[{\multiBraidArrangement}][-x][-1] = n! \, [z^n]  \, \exp \bigg( \sum_{m \ge 1} \frac{F_{\ell,m} \, z^m}{m} \bigg), \\
+f_{n-1}(\multiBraidArrangement) & = (-1)^{n-1} \charPol[\multiBraidArrangement][-1] = n! \, [z^n]  \, \exp \bigg( \sum_{m \ge 1} \frac{F_{\ell,m} \, z^m}{m} \bigg), \\
 % \text{and}\qquad
-b_{n-1}(\multiBraidArrangement) & = [x^{n-1}] \, \bPol[{\multiBraidArrangement}] = (-1)^{n-1} \, [x^{n-1}] \, \mobPol[{\multiBraidArrangement}][-x][1] = - n! \, [z^n]  \, \exp \bigg( - \sum_{m \ge 1} \frac{F_{\ell,m} \, z^m}{m} \bigg).
+b_{n-1}(\multiBraidArrangement) & = (-1)^{n-1} \charPol[\multiBraidArrangement][1] = - n! \, [z^n]  \, \exp \bigg( - \sum_{m \ge 1} \frac{F_{\ell,m} \, z^m}{m} \bigg).
 \end{align*}
 To conclude, we thus just need to observe that
 \(
@@ -830,7 +854,7 @@ U_\ell(z) = \exp \big( (\ell-1) \, (F_\ell(z) - 1) \big) = \exp \big( (\ell-1) \
 \]
 and
 \[
-V_\ell'(z) = \frac{\partial}{\partial z}  - \exp \big( \! - G_\ell(z) \big) = G_\ell'(z) \exp \big( -G_\ell(z) \big)
+V_\ell'(z) = \frac{\partial}{\partial z}  - \exp \big( \! - G_\ell(z) \big) = G_\ell'(z) \exp \big( -G_\ell(z) \big).
 \]
 Consider now the function
 \[
@@ -862,11 +886,11 @@ The duality between the $(2,n)$-braid arrangement~$\multiBraidArrangement[n][2]$
 
 Observe that one can easily compute the full M\"obius polynomials of the $(2,n)$-braid arrangements~$\multiBraidArrangement[n][2]$ from \cref{thm:MobiusPolynomialMultiBraidArrangement}:
 \begin{align*}
-\mobPol[{\multiBraidArrangement[1][2]}] & = 1 \\
-\mobPol[{\multiBraidArrangement[2][2]}] & = x y - 2 x + 2 \\
-\mobPol[{\multiBraidArrangement[3][2]}] & = x^2 y^2 - 6 x^2 y + 10 x^2 + 6 x y - 18 x + 8 \\
-\mobPol[{\multiBraidArrangement[4][2]}] & = x^3 y^3 - 12 x^3 y^2 + 52 x^3 y - 84 x^3 + 12 x^2 y^2 - 96 x^2 y + 216 x^2 + 44 x y - 182 x + 50 \\
-\mobPol[{\multiBraidArrangement[5][2]}] & = x^4 y^4 - 20 x^4 y^3 + 160 x^4 y^2 - 620 x^4 y + 1008 x^4 \\ & \quad+ 20 x^3 y^3 - 300 x^3 y^2 + 1640 x^3 y - 3360 x^3 \\ & \quad+ 140 x^2 y^2 - 1430 x^2 y + 4130 x^2 + 410 x y - 2210 x + 432
+\mobPol[{\multiBraidArrangement[1][2]}] & = 1 \, , \\
+\mobPol[{\multiBraidArrangement[2][2]}] & = x y - 2 x + 2 \, , \\
+\mobPol[{\multiBraidArrangement[3][2]}] & = x^2 y^2 - 6 x^2 y + 10 x^2 + 6 x y - 18 x + 8 \, , \\
+\mobPol[{\multiBraidArrangement[4][2]}] & = x^3 y^3 - 12 x^3 y^2 + 52 x^3 y - 84 x^3 + 12 x^2 y^2 - 96 x^2 y + 216 x^2 + 44 x y - 182 x + 50 \, , \\
+\mobPol[{\multiBraidArrangement[5][2]}] & = x^4 y^4 - 20 x^4 y^3 + 160 x^4 y^2 - 620 x^4 y + 1008 x^4 \\ & \quad+ 20 x^3 y^3 - 300 x^3 y^2 + 1640 x^3 y - 3360 x^3 \\ & \quad+ 140 x^2 y^2 - 1430 x^2 y + 4130 x^2 + 410 x y - 2210 x + 432 \, .
 \end{align*}
 %which can be encoded in matrices as
 %{\small
@@ -958,7 +982,7 @@ The diagonal of the permutahedron~$\Perm$ has
 \item $\displaystyle n! \, [z^n] \exp \bigg( \sum_{m \ge 1} \frac{C_m \, z^m}{m} \bigg)$ vertices,
 \item $\displaystyle (n-1)! \, [z^{n-1}] \exp \bigg( \sum_{m \ge 1} C_m \, z^m \bigg)$ internal vertices,
 \end{itemize}
-where~$\displaystyle C_m \eqdef \frac{1}{m+1} \binom{2m}{m}$ denotes the $m$th Catalan number.
+where~$\displaystyle C_m \eqdef \frac{1}{m+1} \binom{2m}{m}$ denotes the $m$\ordinal{} Catalan number.
 \end{corollary}
 
 \begin{proof}
