--- a/paper/sec/fvectors.tex
+++ b/paper/sec/fvectors.tex
@@ -530,6 +530,9 @@ A \defn{$(\ell,n)$-rainbow forest} (resp.~\defn{tree}) is a \mbox{$\ell$-rainbow
 We denote by~$\rainbowForests$ (resp.~$\rainbowTrees$) the set of $(\ell,n)$-rainbow forests (resp.~trees), and set~$\rainbowForests[][\ell] \eqdef \bigsqcup_n \rainbowForests$ (resp.~$\rainbowTrees[][\ell] \eqdef \bigsqcup_n \rainbowTrees$).
 \end{definition}
 
+For instance, we have listed all $(2,4)$-rainbow trees in \cref{fig:rainbowTrees}\,(top).
+This figure actually illustrates the following statement.
+
 \begin{lemma}
 \label{lem:FussCatalan}
 The $(\ell,m)$-rainbow trees are counted by the \defn{Fuss-Catalan number}
