--- a/paper/sec/bijections.tex
+++ b/paper/sec/bijections.tex
@@ -197,7 +197,7 @@ In the case of the permutahedron it sends $\LAD$ to $(\LAD)^\op$ and $\SUD$ to $
 
 \subsection{Facets of operadic diagonals}
 
-We have seen in \cref{thm:vertices2nBraidArrangement} that facets of any diagonal of the permutahedron are in bijection with $(2,n)$-trees, that is pair of partitions whose intersection graph is a tree.
+We have seen in \cref{subsec:multiBraidArrangement} that facets of any diagonal of the permutahedron are in bijection with $(2,n)$-trees, that is pair of partitions whose intersection graph is a tree.
 These are precisely the \emph{essential complementary partitions} studied in \cite{chen1969computer,chen1971tables,kajitani1982number}. 
 Here we describe a specific planar embedding of the $(2,n)$-trees for each operadic diagonal. 
 \Guillaume{Simplify and unify exposition with Section 1}
@@ -248,7 +248,7 @@ For a larger example see \cref{ex:ECbijection}.
 %We say a bipartite graph is \emph{ordered} if one of the sets is considered smaller than the other and we denote the partition $(V_L,V_R)$. 
 %We say a graph with $n$ edges is \emph{edge labelled} if there exists a bijection between the edges and $\{1,\dots,n\}$.
 
-As we have seen in the proof of \cref{thm:vertices2nBraidArrangement}, essential complementary partitions are in bijection with $(2,n)$-trees.
+As we have seen in \cref{subsec:multiBraidArrangement}, essential complementary partitions are in bijection with $(2,n)$-trees.
 Given an essential complementary pair $(\sigma,\tau)$, the corresponding $(2,n)$-tree has the blocks of each partition as its vertices, and two such vertices are connected by an edge if the two blocks share a common element, which labels the edge, see \cref{ex:ECbijection}.
 
 
